--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,12 +21,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:localeConfig="@xml/locales_config"
-        android:theme="@style/Theme.stepsy">
+        android:theme="@style/Theme.Stepsy">
 
         <activity
             android:name="com.nvllz.stepsy.ui.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.stepsy">
+            android:theme="@style/Theme.Stepsy">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -36,7 +36,7 @@
         <activity
             android:name="com.nvllz.stepsy.ui.SettingsActivity"
             android:exported="false"
-            android:theme="@style/Theme.stepsySettings"
+            android:theme="@style/Theme.Stepsy"
             android:label="@string/settings"
             android:parentActivityName="com.nvllz.stepsy.ui.MainActivity" >
         <meta-data
